Fix HTML doctype casing and update welcome message for consistency

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,7 @@
 		<section class="banner">
 			<img src="img/mario-banner.jpeg" alt="mario banner" />
 			<div class="welcome">
-				<h2>Welcome to <br /><span>Mario Club</span></h2>
+				<h2>Welcome to <br /><span>Mario Club!</span></h2>
 			</div>
 		</section>
 
