--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Mario Club</h1>
+			<h1><a href="/">Mario Club</a></h1>
 		</header>
 
 		<section class="banner">
