Implement dark mode toggle feature with corresponding styles and scripts

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<body>
 		<header>
 			<h1><a href="/">Mario Club</a></h1>
+			<button id="darkModeToggle" class="dark-mode-toggle">🌙</button>
 		</header>
 
 		<nav class="main-nav">
@@ -74,5 +75,6 @@
 		<footer>
 			<p class="copyright">Copyright 2026 Mario Club</p>
 		</footer>
+		<script src="/js/dark-mode.js"></script>
 	</body>
 </html>
