--- a/game-detail.html
+++ b/game-detail.html
@@ -12,6 +12,7 @@
 	<body>
 		<header>
 			<h1><a href="/">Mario Club</a></h1>
+			<button id="darkModeToggle" class="dark-mode-toggle">🌙</button>
 		</header>
 
 		<nav class="main-nav">
@@ -316,5 +317,6 @@
 			// Load game detail on page load
 			loadGameDetail();
 		</script>
+		<script src="/js/dark-mode.js"></script>
 	</body>
 </html>
