--- a/games.html
+++ b/games.html
@@ -8,6 +8,7 @@
 	<body>
 		<header>
 			<h1><a href="/">Mario Club</a></h1>
+			<button id="darkModeToggle" class="dark-mode-toggle">🌙</button>
 		</header>
 
 		<nav class="main-nav">
@@ -372,5 +373,6 @@
 			// Display games on page load
 			displayGames(currentPage);
 		</script>
+		<script src="/js/dark-mode.js"></script>
 	</body>
 </html>
